--- a/src/pages/Table.css
+++ b/src/pages/Table.css
@@ -1,6 +1,7 @@
-@media (width < 1025px) {
+@media (width < 950px) {
 	.table-container {
-		max-width: 400px;
+		max-width: 100vw;
+		padding: 0 .25rem;
       margin:1rem auto;
 	}
 }
